# f1c100s-hal

./: Cargo.toml  README.md  armv5te-none-eabi.json  build.rs  build_boot.sh  memory-default.x  memory-spl.x  memory.x  mkboot.py  rust-toolchain.toml
.cargo/: config.toml
examples/: blinky.rs  button.rs  lcd_lines.rs  sdram_test.rs  spi_flash.rs  spi_flash_dma.rs
src/: debug.rs  display.rs  dram.rs  exti.rs  gpio.rs  intc.rs  interrupt.rs  lib.rs  macros.rs  spi.rs
src/dma/: mod.rs
src/embassy/: mod.rs  time_driver.rs
src/rcc/: f1c100s.rs  mod.rs
src/timer/: mod.rs
src/usart/: mod.rs
