[package]
name = "f1c100s-hal"
version = "0.1.0"
edition = "2021"
authors = ["apeng <apeng2012@gmail.com>"]
description = "HAL for the Allwinner F1C100S ARM9 microcontroller"
keywords = ["f1c100s", "arm9", "hal"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
f1c100s-pac = { git = "https://github.com/apeng2012/f1c100s-pac.git", branch = "master" }
arm9 = { git = "https://github.com/apeng2012/arm9.git", branch = "master", features = ["critical-section-single-core"] }
arm9-rt = { git = "https://github.com/apeng2012/arm9.git", branch = "master" }

embedded-hal = { version = "1.0" }

critical-section = { version = "1.2.0" }
defmt = { version = "0.3.8", optional = true }

embassy-hal-internal = "0.3.0"

[dev-dependencies]
panic-halt = "1.0"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[features]
default = []
defmt = ["dep:defmt"]

[[example]]
name = "blinky"
